# hadess-sensorfw-proxy

./: CMakeLists.txt  iio-sensor-proxy.cpp  meson.build
data/: meson.build
debian/: control
sensorfw-core/: meson.build  sensorfw_common.cpp  sensorfw_common.h  sensorfw_proximity_sensor.cpp  sensorfw_proximity_sensor.h
sensorfw-core/utils/: dbus_connection_handle.cpp
